# hackmatch

./: .gitignore  Makefile  README.md  TODO.md  benchmark.py  demo.py  install.sh  pyproject.toml  requirements.txt  run.sh  stats.txt
hackmatch/: __main__.py  ai.py  config.py  game.py  gui.py  logic.py  main.py  py.typed  util.py
