# -----------------------------------------------------------------------------
# Metadata
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "hackmatch"
authors = [
    {name="Rodrigo Silva (MestreLion)", email="linux@rodrigosilva.com"},
]
description = "Exapunks HACK*MATCH Bot"
license =  {text = "GPL-3.0-or-later"}  # Free text, using SPDX
urls."Homepage" = "https://github.com/MestreLion/hackmatch"
urls."Source Code" = "https://github.com/MestreLion/hackmatch"
urls."Bug Tracker" = "https://github.com/MestreLion/hackmatch/issues"
readme = "README.md"
keywords = [ "exapunks", "hackmatch", "game", "bot"]
classifiers = [
    # https://pypi.org/classifiers/
    "Development Status :: 1 - Planning",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Games/Entertainment :: Arcade",
    "Topic :: Games/Entertainment :: Puzzle Games",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    # "Typing :: Typed",
]
dynamic = ["version"]

# -----------------------------------------------------------------------------
# Requirements
requires-python = ">=3.7"  # from setuptools >= 59.3 and other dependencies
dependencies = [
    "Pillow",
    "PyAutoGUI",
    "PyWinCtl",
    "typing_extensions ; python_version < '3.10'",  # TypeAlias
]
[project.optional-dependencies]
dev = [
    "black",
    "mypy >= 0.900",  # pyproject.toml
    "types-Pillow",
    "types-PyAutoGUI > 0.9.3.2",  # pyScreeze reexport fixes
]
extra = [
    "pygame",  # to convert SDL2 key codes to PyAutoGui key names
]
# -----------------------------------------------------------------------------
# Entry points
[project.scripts]
hackmatch-bot = "hackmatch.main:run"

# -----------------------------------------------------------------------------
# Building
[build-system]
requires = ["setuptools >= 61.0.0"]  # Supports pyproject.toml configuration
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "hackmatch.main.__version__"}

# -----------------------------------------------------------------------------
# Tools

# Run as: mypy
[tool.mypy]
packages = "hackmatch"
exclude = ["venv"]
strict = true

# Run as: black .
[tool.black]
target-version = ["py37", "py38", "py39", "py310", "py311"]
line-length = 94
#include = '\.pyi?$'

#[tool.isort]
#profile = "black"
#line_length = 94
